<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.deerlive.zhuawawa.activity.InviteActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="43dp"
            android:layout_height="23dp"
            android:paddingRight="20dp"
            android:foreground = "?attr/selectableItemBackground"
            android:layout_centerVertical="true"
            android:src="@mipmap/player_back"
            android:onClick="goBack"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:text="邀请好友"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="onAddress">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/iv_invite_address"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/invite_address"
                android:textColor="@color/center_black"
                android:textSize="12sp"
                android:id="@+id/tv_service" />
            <ImageView
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_arrow"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/user_center_lion"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="onQQ">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/iv_invite_qq"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:id="@+id/tv_otherLogin"
                android:text="@string/invite_qq"
                android:textColor="@color/center_black"
                android:textSize="12sp"
                />
            <ImageView
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_arrow"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/user_center_lion"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="onWeChat">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/iv_invite_wechat"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/invite_wechat"
                android:textColor="@color/center_black"
                android:textSize="12sp"
                android:id="@+id/textView" />
            <ImageView
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_arrow"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/user_center_lion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="onSina">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/iv_invite_sina"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/invite_sina"
                android:textColor="@color/center_black"
                android:textSize="12sp"/>
            <ImageView
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/user_center_lion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="onLinked">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/iv_invite_linked"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/invite_linkedin"
                android:textColor="@color/center_black"
                android:textSize="12sp"/>
            <ImageView
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/user_center_lion"/>


    </LinearLayout>

</LinearLayout>
